"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-07-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-80:
	  Fixed ACX-PR-5876: false positive diagnostic on wire-buf
		on built-in channel types.  Old test cases' createdump
		expects updated: meta! and meta? flags are only applied when
		possibly connected to producer/consumer, not just by
		connecting to ports.  New test cases added as chp/buf*.


2011-07-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79b:
	  AST/instance.cc: fixed front-end bug ACX-PR-5273, 
		failure to reject parameter value expression in port.
	  Test cases added.


2011-07-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79a:
	  No source revision: added scripts/spice-to-hac.awk and tested it.


2011-07-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79:
	  lexer/hackt-lex.ll: added support for escaped identifiers,
		Verilog style: \garbage[space]
	  Added one regression test case.


2011-06-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-78:
	  No source revision, moving repo from cvs to git.

2011-06-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-77:
	  hacprsim: critical bug fix (ACX-PR-6393)
		in unstable-dequeue mode, a vacuous strong event gets 
		dropped, while a weak pending event is (possibly) 
		unstable, and then mistakenly killed.
		Solution, updated pending weak unstable event to
		strong event if being pulled.
		Added test case, no regressions.


2011-06-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-76a:
	  hacprsim: starting to rewrite small pieces to simplify
		transition to new event engine.  auto_flush_queue
		now takes an event_cause_type struct.
		No regressions.

